[package]
name = "messaging-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.2", features = ["tokio-comp"] }
dotenv = "0.15.0"
axum = "0.6.2"
tokio = { version = "1.24.1", features = ["full"]}
uuid = {version = "1.2.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
serde_json = "*"
serde = {version = "*", features = ["derive"]}
futures = "0.3.17"
axum-macros = "0.3.1"